package com.appointment.Domain;

public enum UserRole {
    ADMIN,
    USER
}