package com.appointment.Domain.value;

public class TimeSlot {
}
